--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,12 @@
 <h3>Satellite Count:</h3>
 <div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
+	<div> Total: <span class="counts-total"></span></div>
+	<div> Space Deris: <span class="counts-total"></span></div>
+	<div> Communication: <span class="counts-total"></span></div>
+	<div> Probe: <span class="counts-total"></span></div>
+	<div> Positioning: <span class="counts-total"></span></div>
+	<div> Space Station: <span class="counts-total"></span></div>
+	<div> Telescope: <span class="counts-total"></span></div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
